# metaparser

./: .gitignore  Dockerfile  requirements.txt  requirements_test.txt  setup.cfg
.github/workflows/: ci.yml
metaparser/: __main__.py  utils.py
metaparser/modules/: auto.py  base.py  constants.py  exif.py  mp3.py  mp4.py  openXml.py  pdf.py
src/: __main__.py
src/modules/: base.py  exif.py
test/: openXmlTest.py  test.docx
test/resources/: test.docx  test.pptx
