[metadata]
name = metaparser
version = 0.0.1
author = Krzysztof Zdulski, Maciej Wlodarczyk, Marcin Dadura
description = Simple metadata parser for Cybersecurity course
url = https://github.com/RouNNdeL/metaparser
platforms = any
classifiers = 
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.9
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.9

[options.packages.find]
include =
    metaparser*

[options.entry_points]
console_scripts =
    metaparser = metaparser.__main__:entry_point

[flake8]
exclude = .venv,.git,.tox,docs,venv,bin,lib,deps,build
max-complexity = 25
doctests = True
inline-quotes = double
# To work with Black
# E501: line too long
# W503: Line break occurred before a binary operator
# E203: Whitespace before ':'
# D202 No blank lines allowed after function docstring
# W504 line break after binary operator
ignore =
    E501,
    W503,
    E203,
    D202,
    W504
noqa-require-code = True
